<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Customer Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signIn">Sign In</string>
    <string name="createAccount">Create Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="addCustomer">Add Customer</string>
    <string name="listOfCustomers">List of Customers</string>
    <string name="changePassword">Change Password</string>
    <string name="title_activity_add_customer">AddCustomerActivity</string>
    <string name="title_activity_customer_list">CustomerListActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="name">Firstname, Lastname</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="datePicker">Choose Date</string>
    <string name="imagePicker">Choose Image</string>
    <string name="changePass1">Type Your New Password</string>
    <string name="changePass2">Retype Your New Password</string>
    <string name="changeButton">Change Password</string>
    <string name="createCustomer">Create Customer</string>
    <string name="enterUsername">Enter Your Username</string>
    <string name="enterPassword">Enter Your Password</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="title_activity_edit_customer">EditCustomerActivity</string>
    <string name="editCustomer">Edit Customer</string>
    <string name="oldPassword">Enter old password</string>

</resources>