<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    <EditText
        android:id="@+id/etUsernamRequired"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>
    
    
    
    <EditText
        android:id="@+id/etOldPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/oldPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etChangePass1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:hint="@string/changePass1" />

    <EditText
        android:id="@+id/etChangePass2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:hint="@string/changePass2"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btChangePassClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/changeButton"
        android:onClick="btChangePassClick" />

</LinearLayout>