<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:hint="@string/enterUsername" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:inputType="textPassword"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:hint="@string/enterPassword" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:onClick="loginButtonClick"
        android:contentDescription="@string/signIn" />
    
     <Button
        android:id="@+id/btSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:onClick="createAccountClick"
        android:contentDescription="@string/createAccount" />

</LinearLayout>