<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etNewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/name"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/etNewDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/dateOfBirth" />

    <Button
        android:id="@+id/btNewDatePicker"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:enabled="false"
        android:onClick="newDatePickerClick"
        android:text="@string/datePicker" />

    <ImageView
        android:id="@+id/newImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/imagePicker" />

    <Button
        android:id="@+id/btNewImagePicker"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:onClick="newImagePickerClick"
        android:text="@string/imagePicker" />

    <EditText
        android:id="@+id/etNewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/editCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:onClick="editCustomerClick"
        android:text="@string/editCustomer" />

</LinearLayout>